refactor: 플레이어 인원에 대한 예외 처리 진행