@@ -1,6 +1,5 @@
 package blackjack.domain.participant.provider;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
@@ -16,14 +15,15 @@ public class PlayersTestProvider {
 
     public static Stream<Arguments> provideForPlayerNameDuplicatedExceptionTest() {
         return Stream.of(
-                Arguments.of(
-                        List.of("pobi", "pobi"),
-                        Collections.emptyList()
-                ),
-                Arguments.of(
-                        List.of("pobi", "sun", "pobi"),
-                        Collections.emptyList()
-                )
+                Arguments.of(List.of("pobi", "pobi")),
+                Arguments.of(List.of("pobi", "sun", "pobi"))
+        );
+    }
+
+    public static Stream<Arguments> provideForPlayerCountTooManyExceptionTest() {
+        return Stream.of(
+                Arguments.of(List.of("1", "2", "3", "4", "5", "6", "7", "8", "9")),
+                Arguments.of(List.of("a", "b", "c", "d", "e", "f", "g", "h", "i", "j"))
         );
     }
 
